--- a/analysis/normal_mean_penalty_glm_simplified.Rmd
+++ b/analysis/normal_mean_penalty_glm_simplified.Rmd
@@ -19,7 +19,9 @@ where
 
 $T(\theta;g)$ is the inversion of posterior mean operator.
 
-Consider the Poisson case where $s^2 = e^{-\theta}$.
+## Poisson
+
+$s^2 = e^{-\theta}$
 
 ```{r}
 source('code/normal_mean_model_utils.R')
@@ -61,3 +63,36 @@ for(gg in grid_list){
   abline(v=0,lty=3)
 }
 ```
+
+
+```{r}
+binom_penalty = function(theta,w,grid,bn){
+  z_range = range(theta) + c(-10,10)
+  s = sqrt((1+exp(theta))^2/bn/exp(theta))
+  z = S_inv(theta,s,w,grid,z_range)
+  return(-l_nm(z,s,w,grid) - (theta-z)^2/2/s^2 - log(2*pi*s^2)/2)
+}
+plot_binom_penalty = function(theta,w,grid,bn){
+  plot(x,pois_penalty(theta,w,grid),col='blue',lty=2,type='l',xlab='theta',ylab='penalty',
+       main=paste('w=(',paste(w,collapse = ", "),'); grid=(',paste(grid,collapse = ", "),')',sep=''))
+  #legend('bottomright',c(expression(rho(theta))),lty=c(2),col=c('blue'))
+}
+```
+
+## Binomial
+
+$s^2 = \frac{(1+e^\theta)^2}{ne^\theta}$
+
+```{r,fig.height=12,fig.width=12}
+n = 101
+x = seq(-3.5,5,length.out = n)
+s = rep(1,n)
+w = c(0.9,0.1)
+par(mfrow=c(2,2))
+grid_list=c(1,2,3,5)
+for(gg in grid_list){
+  plot_binom_penalty(x,w,c(0,gg),10)
+  abline(v=0,lty=3)
+}
+```
+
