wflow_publish("analysis/index.Rmd")

--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -20,6 +20,7 @@ editor_options:
 * [Solve normal mean problem using optimization - compund penalty](normal_mean_penalized_optimization.html)
 * [Solve normal mean problem using optimization - inversion method](normal_mean_penalized_optimization_inversion.html)
 * [normal mean penalty plots, when $s^2$ depends on posterior mean](normal_mean_penalty_for_glm.html)
+* [normal mean penalty plots, when $s^2$ depends on posterior mean, new version](normal_mean_penalty_glm_simplified.html)
 
 
 ## Poisson mean 
