wflow_publish("analysis/index.Rmd")

--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -39,7 +39,7 @@ editor_options:
 
 ## Poisson smoothing nugget 
 
-
+* [The two step procedure for smoothing overdispersed count data](poisson_nugget_two_step.html)
 
 
 
