--- a/analysis/trendfiltering.ipynb
+++ b/analysis/trendfiltering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,64 +275,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "       [1., 1., 0., 0., 0., 0., 0., 0.],\n",
-       "       [1., 2., 1., 0., 0., 0., 0., 0.],\n",
-       "       [1., 3., 2., 1., 0., 0., 0., 0.],\n",
-       "       [1., 4., 3., 2., 1., 0., 0., 0.],\n",
-       "       [1., 5., 4., 3., 2., 1., 0., 0.],\n",
-       "       [1., 6., 5., 4., 3., 2., 1., 0.],\n",
-       "       [1., 7., 6., 5., 4., 3., 2., 1.]])"
+       "array([[1.   , 0.125, 0.   , 0.   , 0.   , 0.   , 0.   , 0.   ],\n",
+       "       [1.   , 0.25 , 0.   , 0.   , 0.   , 0.   , 0.   , 0.   ],\n",
+       "       [1.   , 0.375, 0.125, 0.   , 0.   , 0.   , 0.   , 0.   ],\n",
+       "       [1.   , 0.5  , 0.25 , 0.125, 0.   , 0.   , 0.   , 0.   ],\n",
+       "       [1.   , 0.625, 0.375, 0.25 , 0.125, 0.   , 0.   , 0.   ],\n",
+       "       [1.   , 0.75 , 0.5  , 0.375, 0.25 , 0.125, 0.   , 0.   ],\n",
+       "       [1.   , 0.875, 0.625, 0.5  , 0.375, 0.25 , 0.125, 0.   ],\n",
+       "       [1.   , 1.   , 0.75 , 0.625, 0.5  , 0.375, 0.25 , 0.125]])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "trendfiltering(8, 1)"
+    "trendfiltering_tibshirani(8, 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1.      , 0.125   , 0.015625, 0.      , 0.      , 0.      ,\n",
-       "        0.      , 0.      ],\n",
-       "       [1.      , 0.25    , 0.0625  , 0.      , 0.      , 0.      ,\n",
-       "        0.      , 0.      ],\n",
-       "       [1.      , 0.375   , 0.140625, 0.      , 0.      , 0.      ,\n",
-       "        0.      , 0.      ],\n",
-       "       [1.      , 0.5     , 0.25    , 0.03125 , 0.      , 0.      ,\n",
-       "        0.      , 0.      ],\n",
-       "       [1.      , 0.625   , 0.390625, 0.09375 , 0.03125 , 0.      ,\n",
-       "        0.      , 0.      ],\n",
-       "       [1.      , 0.75    , 0.5625  , 0.1875  , 0.09375 , 0.03125 ,\n",
-       "        0.      , 0.      ],\n",
-       "       [1.      , 0.875   , 0.765625, 0.3125  , 0.1875  , 0.09375 ,\n",
-       "        0.03125 , 0.      ],\n",
-       "       [1.      , 1.      , 1.      , 0.46875 , 0.3125  , 0.1875  ,\n",
-       "        0.09375 , 0.03125 ]])"
+       "array([[8.  , 4.5 , 2.62, 1.88, 1.25, 0.75, 0.38, 0.12],\n",
+       "       [4.5 , 3.19, 2.08, 1.56, 1.09, 0.69, 0.36, 0.12],\n",
+       "       [2.62, 2.08, 1.42, 1.09, 0.78, 0.5 , 0.27, 0.09],\n",
+       "       [1.88, 1.56, 1.09, 0.86, 0.62, 0.41, 0.22, 0.08],\n",
+       "       [1.25, 1.09, 0.78, 0.62, 0.47, 0.31, 0.17, 0.06],\n",
+       "       [0.75, 0.69, 0.5 , 0.41, 0.31, 0.22, 0.12, 0.05],\n",
+       "       [0.38, 0.36, 0.27, 0.22, 0.17, 0.12, 0.08, 0.03],\n",
+       "       [0.12, 0.12, 0.09, 0.08, 0.06, 0.05, 0.03, 0.02]])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "trendfiltering_tibshirani(8,2)"
+    "np.round(np.matmul(trendfiltering_tibshirani(8, 1).T,trendfiltering_tibshirani(8, 1)),2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.  , 0.12, 0.02, 0.  , 0.  , 0.  , 0.  , 0.  ],\n",
+       "       [1.  , 0.25, 0.06, 0.  , 0.  , 0.  , 0.  , 0.  ],\n",
+       "       [1.  , 0.38, 0.14, 0.  , 0.  , 0.  , 0.  , 0.  ],\n",
+       "       [1.  , 0.5 , 0.25, 0.03, 0.  , 0.  , 0.  , 0.  ],\n",
+       "       [1.  , 0.62, 0.39, 0.09, 0.03, 0.  , 0.  , 0.  ],\n",
+       "       [1.  , 0.75, 0.56, 0.19, 0.09, 0.03, 0.  , 0.  ],\n",
+       "       [1.  , 0.88, 0.77, 0.31, 0.19, 0.09, 0.03, 0.  ],\n",
+       "       [1.  , 1.  , 1.  , 0.47, 0.31, 0.19, 0.09, 0.03]])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.round(trendfiltering_tibshirani(8,2),2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[8.  , 4.5 , 3.19, 1.09, 0.62, 0.31, 0.12, 0.03],\n",
+       "       [4.5 , 3.19, 2.53, 0.96, 0.57, 0.29, 0.12, 0.03],\n",
+       "       [3.19, 2.53, 2.14, 0.86, 0.52, 0.28, 0.12, 0.03],\n",
+       "       [1.09, 0.96, 0.86, 0.36, 0.23, 0.12, 0.05, 0.01],\n",
+       "       [0.62, 0.57, 0.52, 0.23, 0.14, 0.08, 0.04, 0.01],\n",
+       "       [0.31, 0.29, 0.28, 0.12, 0.08, 0.04, 0.02, 0.01],\n",
+       "       [0.12, 0.12, 0.12, 0.05, 0.04, 0.02, 0.01, 0.  ],\n",
+       "       [0.03, 0.03, 0.03, 0.01, 0.01, 0.01, 0.  , 0.  ]])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = trendfiltering_tibshirani(8,2)\n",
+    "np.round(np.matmul(A.T,A),2)"
    ]
   },
   {
