wflow_publish("analysis/index.Rmd")

--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -50,7 +50,7 @@ With Run time Comparison:
 * [exp prior with runtime](exp_prior_runtime.html)
 * [log prior with runtime](log_prior_runtime.html)
 
-## Poisson smoothing nugget 
+## Poisson smoothing 
 
 * [The two step procedure for smoothing overdispersed count data](poisson_nugget_two_step.html)
 
