--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -21,7 +21,7 @@ editor_options:
 * [Solve normal mean problem using optimization - inversion method](normal_mean_penalized_optimization_inversion.html)
 * [Solve normal mean problem using optimization - also estimate prior mean](normal_mean_penalized_optimization_prior_mean.html)
 * [normal mean penalty plots, when $s^2$ depends on posterior mean](normal_mean_penalty_glm_simplified.html)
-* [normal mean penalty plots, when $s^2$ depends on posterior mean, penalty exlcuding $log(2\pi s^2)/2$ ](remove_log_in penalty.html)
+* [normal mean penalty plots, when $s^2$ depends on posterior mean, penalty exlcuding $\log(2\pi s^2)/2$ ](remove_log_in penalty.html)
 * [where is the log term from in the penalty](log_term_in_penalty.html)
 
 
