--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -56,4 +56,6 @@ With Run time Comparison:
 * [The two step procedure for smoothing overdispersed count data](poisson_nugget_two_step.html)
 
 
+## Binomial 
 
+* [Apply Splitting to Binomial Mean problem](binomial_mean_spliiting.html)
