--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -62,7 +62,16 @@ With Run time Comparison:
 
 ### Bechmarking smoothing methods
 
-Clean version:
+I benchmarked methods on the following smooth functions.
+
+* [Angles](smooth_angles_benchmark_new.html)
+* [Bursts](smooth_bursts_benchmark_new.html)
+* [heavisine](smooth_heavisine_benchmark_new.html)
+* [simple blocks](smooth_sblocks_benchmark_new.html)
+* [clipped blocks](smooth_cblocks_benchmark_new.html)
+* [Spike](smooth_spike_benchmark_new.html)
+
+Below are some old results. Specifically the smooth functions are in the log-space. (So after exp they may look different than their name originally suggest.)
 
 I picked up some methods that are performing better and reduce the plot size for better illustration.
 
@@ -88,7 +97,9 @@ Second Run:
 
 * [low count smooth ndwt](splitting_method_low_count_smoothing.html)
 
+## Poisson Matrix Factorization
 
+* [Splitting method in PMF](PMF_splitting.html)
 
 ## Binomial 
 
